--- a/style.css
+++ b/style.css
@@ -16,7 +16,11 @@ body {
   position: relative;
 }
 
-li {
+a {
+  text-decoration: none;
+}
+
+ul {
   list-style: none;
 }
 
@@ -25,45 +29,48 @@ img {
 }
 
 /***************************************** Estilo Menu *****************************************/
-
-.container {
-  display: flex;
-  justify-content: center;
-  height: 70px;
-  width: 100%;
-  margin: 0 auto;
+.header-bg {
   background-color: #080808;
 }
 
-.gran-menu {
+.header {
   display: flex;
-  flex: 1;
-  gap: 50px;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: space-between;
-  margin: 0 30px;
+  align-items: center;
+  gap: 2rem;
+  margin: 0 auto;
+  padding: 1.5rem;
 }
 
 .header-menu {
   font-family: "Roboto", "Open Sans", sans-serif;
   display: flex;
   flex-wrap: wrap;
-  gap: 80px;
+  gap: 7rem;
+  padding-top: 0.5rem;
   align-items: center;
 }
 
 .header-menu a {
+  display: inline-block;
   color: #b3b3b3;
-  text-decoration: none;
-  padding: 5px 0px;
   font-size: 2rem;
   font-weight: 400;
-  border-bottom: 3px solid transparent;
-  transition: all 250ms;
 }
 
-.header-menu a:hover {
-  border-color: #dd53b8;
+.header-menu a:after {
+  content: "";
+  display: block;
+  height: 0.2rem;
+  width: 0%;
+  background-color: #dd53b8;
+  margin-top: 0.4rem;
+  transition: 0.3s;
+}
+
+.header-menu a:hover:after {
+  width: 100%;
 }
 
 .botao a {
@@ -813,10 +820,12 @@ footer p {
   html {
     font-size: 50%;
   }
-
+  .botao a {
+    font-size: 2.5rem;
+  }
   .container-about {
     gap: 100px;
-    margin: 60px auto 0 auto;
+    margin: 150px auto 0 auto;
   }
   .container-about::before {
     top: 370px;
@@ -914,16 +923,16 @@ footer p {
   .menu {
     display: none;
   }
-  .container-hamburguer {
+  .header nav {
     order: 3;
   }
   .one,
   .two,
   .three {
-    background-color: #696969;
-    height: 5px;
+    background-color: #dd53b8;
+    height: 4px;
     width: 100%;
-    margin: 6px auto;
+    margin: 7px auto;
     border-radius: 5px;
     transition-duration: 0.3s;
   }
@@ -934,6 +943,7 @@ footer p {
   }
   .botao {
     margin-left: auto;
+    margin-right: 2rem;
   }
 
   /***************************************** FULLSCREEN *****************************************/
@@ -944,7 +954,7 @@ footer p {
     align-items: center;
     order: 3;
     position: absolute;
-    top: -40px;
+    top: -29px;
     left: 0;
     background-color: #ffebf7;
     width: 100vw;
@@ -970,13 +980,20 @@ footer p {
   }
   .container-hamburguer.on .menu .header-menu {
     text-align: center;
-    display: block;
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+    padding: 0;
+    margin-top: 8.3rem;
   }
   .container-hamburguer.on .menu .header-menu a {
     transition-duration: 0.5s;
     font-size: 3rem;
-    line-height: 10rem;
+    line-height: 7rem;
     text-transform: uppercase;
+  }
+  .container-hamburguer.on .menu .header-menu a:after {
+    height: 0.5rem;
   }
 }
 
