--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ img {
   display: flex;
   flex-wrap: wrap;
   gap: 7rem;
-  padding-top: 0.5rem;
   align-items: center;
 }
 
@@ -56,7 +55,9 @@ img {
   display: inline-block;
   color: #b3b3b3;
   font-size: 2rem;
+  padding: 1.6rem 0;
   font-weight: 400;
+  position: relative;
 }
 
 .header-menu a:after {
@@ -65,8 +66,9 @@ img {
   height: 0.2rem;
   width: 0%;
   background-color: #dd53b8;
-  margin-top: 0.4rem;
   transition: 0.3s;
+  margin-top: 0.4rem;
+  position: absolute;
 }
 
 .header-menu a:hover:after {
